--- a/src/route/HomePage/HomePage.style.scss
+++ b/src/route/HomePage/HomePage.style.scss
@@ -16,7 +16,7 @@
   }
 
   // @include desktop {
-  text-align: center;
+  // text-align: center;
 
   .DynamicContent {
     > div:not(.DynamicContentFullWidthBannerSlider) {
